# buzzkit

./: .gitignore  Cargo.toml  LICENSE  NOTICE  README.md  pyproject.toml
.cargo/: config.toml
.github/workflows/: CI.yml  release.yml
build-support/: vendored-libopus.cmake
examples/: _shared.py  analyze_audio_tap.py  claim_invite.py  huddle_echo.py  huddle_wire_recorder.py  list_channels.py  offline_sign.py  send_message.py  set_profile.py  subscribe.py
python/buzzkit/: __init__.py  _native.pyi  client.py  huddle.py
src/: huddle.rs  lib.rs
tests/: test_huddle.py  test_live_relay.py  test_signing.py
